js/js.translator/testData/incremental/invalidation/typealiasChange/lib1/l1.1.kt
typealias Payload = String

fun payload(): Payload = "1"
